--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     /* HLAVICKA */
 .hlavicka {
     background-size: cover;
-    background-image: url(./images/island-hlavicka.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(./images/island-hlavicka.jpg);
     background-repeat: no-repeat;
     margin: 0 auto;
     display: flex;
